feat: ShopCard on postgres